<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.korkkosebastian.cwpclient.ControlFragment">

    <ToggleButton
        android:id="@+id/connectionToggleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textOn="@string/textOn"
        android:textOff="@string/textOff"
        />

    <TextView
        android:id="@+id/frequencyLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@+id/frequencyInput"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/frequencyLabel"
        android:textSize="22dp"
        />

    <EditText
        android:id="@+id/frequencyInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:width="100dp"
        android:layout_marginTop="10dp"
        />

    <Button
        android:id="@+id/changeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/frequencyInput"
        android:layout_marginLeft="10dp"
        android:text="@string/changeButtonText"/>

</LinearLayout>
